catkin_ws/logs/px4_offboard/build.make.029.log
[  0%] Built target diagnostic_msgs_generate_messages_lisp
[  0%] Built target actionlib_generate_messages_py
[  0%] Built target _catkin_empty_exported_target
[  0%] Built target actionlib_msgs_generate_messages_cpp
[  0%] Built target actionlib_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target _px4_offboard_generate_messages_check_deps_JoyCommand
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target diagnostic_msgs_generate_messages_cpp
[ 16%] Built target checker
[ 16%] Built target diagnostic_msgs_generate_messages_py
[ 16%] Built target sensor_msgs_generate_messages_cpp
[ 16%] Built target actionlib_msgs_generate_messages_py
[ 16%] Built target tf2_msgs_generate_messages_py
[ 16%] Built target roscpp_generate_messages_cpp
[ 16%] Built target roscpp_generate_messages_lisp
[ 16%] Built target nav_msgs_generate_messages_lisp
[ 16%] Built target sensor_msgs_generate_messages_lisp
[ 16%] Built target nav_msgs_generate_messages_cpp
[ 16%] Built target actionlib_generate_messages_lisp
[ 16%] Built target rosgraph_msgs_generate_messages_lisp
[ 16%] Built target mavros_msgs_generate_messages_lisp
[ 16%] Built target roscpp_generate_messages_py
[ 16%] Built target rosgraph_msgs_generate_messages_cpp
[ 16%] Built target sensor_msgs_generate_messages_py
[ 16%] Built target rosgraph_msgs_generate_messages_py
[ 16%] Built target actionlib_generate_messages_cpp
[ 16%] Built target nav_msgs_generate_messages_py
[ 16%] Built target tf2_msgs_generate_messages_cpp
[ 16%] Built target tf2_msgs_generate_messages_lisp
[ 16%] Built target mavros_msgs_generate_messages_cpp
[35m[1mScanning dependencies of target apriltag[0m
[ 16%] Built target mavros_msgs_generate_messages_py
[ 33%] Built target px4_offboard_generate_messages_lisp
[ 33%] [32mBuilding CXX object CMakeFiles/apriltag.dir/src/apriltag.cpp.o[0m
[ 50%] Built target teleop
[ 66%] Built target px4_offboard_generate_messages_py
[ 75%] Built target px4_offboard_generate_messages_cpp
[ 75%] Built target px4_offboard_generate_messages
[ 91%] Built target SLAM
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:41:7: error: ‘command’ was not declared in this scope
       command.yaw = 0.1;
       ^
make[2]: *** [CMakeFiles/apriltag.dir/src/apriltag.cpp.o] Error 1
make[1]: *** [CMakeFiles/apriltag.dir/all] Error 2
make: *** [all] Error 2
